--- a/Unet_Segmentation/Unet_RiverBlind_Evaluation.ipynb
+++ b/Unet_Segmentation/Unet_RiverBlind_Evaluation.ipynb
@@ -16,7 +16,6 @@
     "\n",
     "from unetModules.unet_model import UNet\n",
     "from enetModules.Utils import Utils\n",
-    "#from torch.optim.lr_scheduler import StepLR\n",
     "from sklearn.model_selection import KFold\n",
     "from tqdm import tqdm\n",
     "from PIL import Image\n",
@@ -31,26 +30,24 @@
    "outputs": [],
    "source": [
     "cuda = True\n",
-    "batch_size = 1 # 32\n",
-    "epochs_per_fold = 1 # 80\n",
+    "batch_size = 10\n",
+    "epochs_per_fold = 120\n",
     "learn_rate = 5e-4\n",
     "n_classes = 2\n",
     "n_channels = 3\n",
     "weight_decay = 2e-4\n",
-    "k_folds = 2 # 5\n",
-    "test_val_split_size = 0.15\n",
-    "#description = \"Diese Evaluation wurde mit den mit vorverarbeiteten Schistosoma Mansoni Datensatz getestet. Preprocessing: adjustProperties => brightness=1.1, contrast=3.1, sharpness=2.1, saturation=2.1, grayscale=True. Logik für low visibility wird angewendet\"\n",
-    "description = \"Diese Evaluation wurde mit den Schistosoma Mansoni Datensatz getestet. Datenaugmentierung wurde angewendet.\"\n",
+    "k_folds = 5\n",
+    "description = \"Diese Unet Evaluation wurde mit den unbehandelten River Blindness Datensatz trainiert. Datenaugmentierung wurde angewendet und der Datensatz wurde um weiter Bilder erweitert(+Red). Validation set wurde separiert.\"\n",
     "\n",
     "path_save_model = \"./modelEvaluation/\"\n",
     "#path_images = \"../../content/SchistosomaMansoni/img/\"\n",
     "#path_labels = \"../../content/SchistosomaMansoni/labels/\"\n",
     "#path_images_val = \"../../content/SchistosomaMansoni/val_img/\"\n",
-    "#path_labels_val = \"../..//content/SchistosomaMansoni/val_labels/\"\n",
-    "path_images = \"./content/RiverBlindness/img/\"\n",
-    "path_labels = \"./content/RiverBlindness/labels/\"\n",
-    "path_images_val = \"./content/RiverBlindness/val_img/\"\n",
-    "path_labels_val = \".//content/RiverBlindness/val_labels/\"\n",
+    "#path_labels_val = \"../../content/SchistosomaMansoni/val_labels/\"\n",
+    "path_images = \"../../content/RiverBlindness/img/\"\n",
+    "path_labels = \"../../content/RiverBlindness/labels/\"\n",
+    "path_images_val = \"../../content/RiverBlindness/val_img/\"\n",
+    "path_labels_val = \"../../content/RiverBlindness/val_labels/\"\n",
     "\n",
     "with open(path_save_model + \"logs/settings.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    settings = { \n",
@@ -61,7 +58,6 @@
     "        \"n_classes\": n_classes,\n",
     "        \"weight_decay\": weight_decay,\n",
     "        \"k_folds\": k_folds,\n",
-    "        \"test_val_split_size\": test_val_split_size,\n",
     "        \"description\": description\n",
     "    }\n",
     "    \n",
@@ -96,15 +92,13 @@
     "# Reading train images and labels                  \n",
     "for file in img_filenames:    \n",
     "    img = Image.open(path_images + file)\n",
-    "    augmented_imgs = Utils.imageAugmentation(img)\n",
+    "    label = Image.open(path_labels + file)\n",
+    "    augmented_imgs, augmented_labels = Utils.imageAugmentation(img, label)\n",
     "        \n",
     "    for aug_img in augmented_imgs:\n",
     "        img = cv2.resize(np.array(aug_img), (512, 512), cv2.INTER_NEAREST)\n",
     "        input_train.append(img[:,:,0:3]) # cutting out potential alpha channel\n",
-    "    \n",
-    "    label = Image.open(path_labels + file)\n",
-    "    augmented_labels = Utils.imageAugmentation(label)\n",
-    "     \n",
+    "      \n",
     "    for aug_label in augmented_labels:\n",
     "        label = cv2.resize(np.array(aug_label), (512, 512), cv2.INTER_NEAREST)\n",
     "        label_train.append(label)\n",
@@ -384,7 +378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -398,12 +392,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.4 (tags/v3.9.4:1f2e308, Apr  6 2021, 13:40:21) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e13e9491bfa04db65f893cb26a9f9ceb28b1a0838cf44c7494eac69a94d5918"
+    "hash": "9a28f90e9e7e16bb48f3923e9d683c0c69a588450d8009e66427bb0a83f7dbaf"
    }
   }
  },
