--- a/Enet_Segmentation/Enet_Schistosoma_Train.ipynb
+++ b/Enet_Segmentation/Enet_Schistosoma_Train.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a81aecf7-8dd7-4fda-bf40-75d4eff22785",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a872e25d-c6b2-411f-af1d-07ae776d6213",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
     "save_every = 5\n",
     "n_classes = 2\n",
     "weight_decay = 2e-4\n",
-    "description = \"Diese System wurde mit den unbehandelten River Blindness Datensatz trainiert. Datenaugmentierung wurde angewendet und der Datensatz wurde um weiter Bilder erweitert(+Red). Validation set wurde separiert.\"\n",
+    "description = \"Diese System wurde mit den unbehandelten River Blindness Datensatz trainiert. Datenaugmentierung wurde angewendet und der Datensatz wurde um weiter Bilder erweitert(+Red). Validation set wurde separiert und augmentiert.\"\n",
     "\n",
     "path_save_model = \"./model/\"\n",
     "#path_images = \"../../content/SchistosomaMansoni/img/\"\n",
@@ -101,22 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dfeaebf1-e364-4e1d-a601-95bcd9f7810a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO]Starting to define the class weights...\n",
-      "[INFO]Fetched all class weights successfully!\n",
-      "[INFO]Model Instantiated!\n",
-      "[INFO]CUDA is available!\n",
-      "[INFO]Defined the loss function and the optimizer\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "img_filenames = np.array(os.listdir(path_images))\n",
     "input_train = []\n",
@@ -126,8 +114,9 @@
     "\n",
     "assert(len(img_filenames) == len(label_filenames))\n",
     "\n",
-    "# Reading train images and labels                  \n",
-    "for file in img_filenames:    \n",
+    "print(\"[INFO]Loading trainings dataset.\")\n",
+    "# Reading train images and labels                      \n",
+    "for file in tqdm(img_filenames):    \n",
     "    img = Image.open(path_images + file)\n",
     "    label = Image.open(path_labels + file)\n",
     "    augmented_imgs, augmented_labels = Utils.imageAugmentation(img, label)\n",
@@ -146,7 +135,6 @@
     "label_train = np.array(label_train) \n",
     "label_train = torch.tensor(label_train)\n",
     "\n",
-    "# Reading validation images and labels\n",
     "val_img_filenames = np.array(os.listdir(path_images_val))\n",
     "input_val = []\n",
     "\n",
@@ -155,8 +143,9 @@
     "\n",
     "assert(len(val_img_filenames) == len(val_label_filenames))\n",
     "\n",
-    "# Validation set should not be augmented\n",
-    "for file in val_img_filenames:\n",
+    "print(\"[INFO]Loading validation dataset\")\n",
+    "# Reading validation images and labels. Validation set should not be augmented\n",
+    "for file in tqdm(val_img_filenames):\n",
     "    val_img = Image.open(path_images_val + file)\n",
     "    val_img = cv2.resize(np.array(val_img), (512, 512), cv2.INTER_NEAREST)\n",
     "    input_val.append(val_img[:,:,0:3])\n",
@@ -164,7 +153,7 @@
     "    val_label = Image.open(path_labels_val + file)\n",
     "    val_label = cv2.resize(np.array(val_label), (512, 512), cv2.INTER_NEAREST)\n",
     "    label_val.append(val_label)\n",
-    "    \n",
+    "\n",
     "input_val = np.stack(input_val, axis=2)\n",
     "input_val = torch.tensor(input_val).transpose(0,2).transpose(1,3)\n",
     "\n",
@@ -205,41 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c9fb0f5b-6e80-47e0-a02b-2d1e6d47f545",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO]Starting Training...\n",
-      "--------------- Epoch 1 ---------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  8%|▊         | 11/131 [00:05<00:56,  2.11it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16048\\3720512928.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Viktor\\anaconda3\\lib\\site-packages\\torch\\_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    486\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    487\u001b[0m             )\n\u001b[1;32m--> 488\u001b[1;33m         torch.autograd.backward(\n\u001b[0m\u001b[0;32m    489\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    490\u001b[0m         )\n",
-      "\u001b[1;32mc:\\Users\\Viktor\\anaconda3\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    195\u001b[0m     \u001b[1;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    196\u001b[0m     \u001b[1;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 197\u001b[1;33m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[0;32m    198\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    199\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"[INFO]Starting Training...\")\n",
     "\n",
