Enet script changes

--- a/Enet_Segmentation/Enet_Schistosoma_Train.ipynb
+++ b/Enet_Segmentation/Enet_Schistosoma_Train.ipynb
@@ -65,13 +65,13 @@
     "save_every = 5\n",
     "n_classes = 2\n",
     "weight_decay = 2e-4\n",
-    "description = \"Diese System wurde mit den unbehandelten River Blindness Datensatz trainiert. Datenaugmentierung wurde angewendet und der Datensatz wurde um weiter Bilder erweitert(+Red). Validation set wurde separiert und augmentiert.\"\n",
+    "description = \"Diese Enet Training wurde mit den River Blindess Datensatz trainiert. Erweiterere(Rotation + Sharpend + Contrast) Datenaugmentierung wurde angewendet. Validation set wurde separiert.\"\n",
     "\n",
     "path_save_model = \"./model/\"\n",
-    "#path_images = \"../../content/SchistosomaMansoni/img/\"\n",
-    "#path_labels = \"../../content/SchistosomaMansoni/labels/\"\n",
-    "#path_images_val = \"../../content/SchistosomaMansoni/val_img/\"\n",
-    "#path_labels_val = \"../../content/SchistosomaMansoni/val_labels/\"\n",
+    "# path_images = \"../../content/SchistosomaMansoni/img/\"\n",
+    "# path_labels = \"../../content/SchistosomaMansoni/labels/\"\n",
+    "# path_images_val = \"../../content/SchistosomaMansoni/val_img/\"\n",
+    "# path_labels_val = \"../../content/SchistosomaMansoni/val_labels/\"\n",
     "path_images = \"../../content/RiverBlindness/img/\"\n",
     "path_labels = \"../../content/RiverBlindness/labels/\"\n",
     "path_images_val = \"../../content/RiverBlindness/val_img/\"\n",
@@ -290,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
