--- a/Enet_Segmentation/MetrikenTrain.ipynb
+++ b/Enet_Segmentation/MetrikenTrain.ipynb
@@ -105,8 +105,7 @@
    "outputs": [],
    "source": [
     "# Set the path to the folder which contains the metrics files\n",
-    "path_metrics = \"../Unet_Segmentation/modelBackups/UnetModel_09_01_2023_Test_100E/logs/\"\n",
-    "#path_metrics = \"./modelBackups/Model_03_01_2023_RB_DataAug_holdoutVal_bigDS_Red/logs/\""
+    "path_metrics = \"../Unet_Segmentation/modelBackups/RiverBlindnessEvaluation_13_02_23_best/logs/\""
    ]
   },
   {
@@ -124,27 +123,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "╒══════════════╤═════════╕\n",
-      "│ \u001b[1;3mSetting\u001b[0m      │ \u001b[1;3mValue\u001b[0m   │\n",
-      "╞══════════════╪═════════╡\n",
-      "│ cuda         │ 1       │\n",
-      "├──────────────┼─────────┤\n",
-      "│ batch_size   │ 2       │\n",
-      "├──────────────┼─────────┤\n",
-      "│ epochs       │ 100     │\n",
-      "├──────────────┼─────────┤\n",
-      "│ learn_rate   │ 0.0005  │\n",
-      "├──────────────┼─────────┤\n",
-      "│ n_classes    │ 2       │\n",
-      "├──────────────┼─────────┤\n",
-      "│ n_channels   │ 3       │\n",
-      "├──────────────┼─────────┤\n",
-      "│ weight_decay │ 0.0002  │\n",
-      "╘══════════════╧═════════╛\n",
-      "\u001b[1;3mDescription: \u001b[0mDiese Unet System wurde mit den unbehandelten River Blindness Datensatz trainiert. Datenaugmentierung wurde angewendet und der Datensatz wurde um weiter Bilder erweitert(+Red). Validation set wurde separiert.\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../Unet_Segmentation/modelBackups/RiverBlindnessEvaluation_13_02_23_best/logssettings.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-48b6b68790cd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msettings_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_metrics\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'settings.json'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0msettings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msettings_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msettings_file\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtabledata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdescription\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msettings_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../Unet_Segmentation/modelBackups/RiverBlindnessEvaluation_13_02_23_best/logssettings.json'"
      ]
     }
    ],
@@ -168,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f58bd4b2",
    "metadata": {},
    "outputs": [
