Unet script changes

--- a/Unet_Segmentation/Unet_RiverBlind_Train.ipynb
+++ b/Unet_Segmentation/Unet_RiverBlind_Train.ipynb
@@ -16,7 +16,6 @@
     "\n",
     "from unetModules.unet_model import UNet\n",
     "from unetModules.Utils import Utils\n",
-    "from torch.optim.lr_scheduler import StepLR\n",
     "from tqdm import tqdm\n",
     "from PIL import Image"
    ]
@@ -29,19 +28,19 @@
    "source": [
     "cuda = True\n",
     "batch_size = 2\n",
-    "epochs = 120\n",
+    "epochs = 100\n",
     "learn_rate = 5e-4\n",
     "save_every = 5\n",
     "n_classes = 2\n",
     "n_channels = 3\n",
     "weight_decay = 2e-4\n",
-    "description = \"Diese Unet System wurde mit den unbehandelten River Blindness Datensatz trainiert. Datenaugmentierung wurde angewendet und der Datensatz wurde um weiter Bilder erweitert(+Red). Validation set wurde separiert.\"\n",
+    "description = \"Diese Unet Evaluation wurde mit den River Blindess Datensatz trainiert. Erweiterere(Rotation + Sharpend + Contrast) Datenaugmentierung wurde angewendet. Validation set wurde separiert.\"\n",
     "\n",
     "path_save_model = \"./model/\"\n",
-    "#path_images = \"../../content/SchistosomaMansoni/img/\"\n",
-    "#path_labels = \"../../content/SchistosomaMansoni/labels/\"\n",
-    "#path_images_val = \"../../content/SchistosomaMansoni/val_img/\"\n",
-    "#path_labels_val = \"../../content/SchistosomaMansoni/val_labels/\"\n",
+    "# path_images = \"../../content/SchistosomaMansoni/img/\"\n",
+    "# path_labels = \"../../content/SchistosomaMansoni/labels/\"\n",
+    "# path_images_val = \"../../content/SchistosomaMansoni/val_img/\"\n",
+    "# path_labels_val = \"../../content/SchistosomaMansoni/val_labels/\"\n",
     "path_images = \"../../content/RiverBlindness/img/\"\n",
     "path_labels = \"../../content/RiverBlindness/labels/\"\n",
     "path_images_val = \"../../content/RiverBlindness/val_img/\"\n",
@@ -148,6 +147,7 @@
     "    device = torch.device(\"cpu\")\n",
     "                \n",
     "unet = unet.to(device)\n",
+    "grad_scaler = torch.cuda.amp.GradScaler(enabled=True)\n",
     "criterion = nn.CrossEntropyLoss(weight=torch.FloatTensor(class_weights).to(device))\n",
     "optimizer = torch.optim.Adam(unet.parameters(),\n",
     "                                lr=learn_rate,\n",
@@ -175,13 +175,16 @@
     "    for _ in tqdm(range(batch_count_train)):\n",
     "        X_train, y_train = input_train[batch_size * _: batch_size * (_ + 1)], label_train[batch_size * _: batch_size * (_ + 1)]        \n",
     "        X_train, y_train = X_train.to(device), y_train.to(device)\n",
-    "\n",
+    "        \n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        out = unet(X_train.float())        \n",
-    "        loss = criterion(out, y_train.long())           \n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        with torch.autocast(device.type, enabled=True):\n",
+    "            out = unet(X_train.float())        \n",
+    "            loss = criterion(out, y_train.long()) \n",
+    "\n",
+    "        grad_scaler.scale(loss).backward()\n",
+    "        grad_scaler.step(optimizer)\n",
+    "        grad_scaler.update()\n",
     "\n",
     "        train_loss += loss.item()\n",
     "        \n",
