--- a/Enet_Segmentation/Enet_Schistosoma_Train.ipynb
+++ b/Enet_Segmentation/Enet_Schistosoma_Train.ipynb
@@ -60,22 +60,22 @@
    "source": [
     "cuda = True\n",
     "batch_size = 10\n",
-    "epochs = 120\n",
+    "epochs = 140\n",
     "learn_rate = 5e-4\n",
     "save_every = 5\n",
     "n_classes = 2\n",
     "weight_decay = 2e-4\n",
-    "description = \"Diese Enet Training wurde mit den River Blindess Datensatz trainiert. Erweiterere(Rotation + Sharpend + Contrast) Datenaugmentierung wurde angewendet. Validation set wurde separiert.\"\n",
+    "description = \"Diese Enet Training wurde mit dem Schistosoma Mansoni Datensatz trainiert. Erweiterere(Rotation + Sharpend + Contrast) Datenaugmentierung wurde angewendet. Validation set wurde separiert.\"\n",
     "\n",
     "path_save_model = \"./model/\"\n",
-    "# path_images = \"../../content/SchistosomaMansoni/img/\"\n",
-    "# path_labels = \"../../content/SchistosomaMansoni/labels/\"\n",
-    "# path_images_val = \"../../content/SchistosomaMansoni/val_img/\"\n",
-    "# path_labels_val = \"../../content/SchistosomaMansoni/val_labels/\"\n",
-    "path_images = \"../../content/RiverBlindness/img/\"\n",
-    "path_labels = \"../../content/RiverBlindness/labels/\"\n",
-    "path_images_val = \"../../content/RiverBlindness/val_img/\"\n",
-    "path_labels_val = \"../../content/RiverBlindness/val_labels/\"\n",
+    "path_images = \"../../content/SchistosomaMansoni/img/\"\n",
+    "path_labels = \"../../content/SchistosomaMansoni/labels/\"\n",
+    "path_images_val = \"../../content/SchistosomaMansoni/val_img/\"\n",
+    "path_labels_val = \"../../content/SchistosomaMansoni/val_labels/\"\n",
+    "# path_images = \"../../content/RiverBlindness/img/\"\n",
+    "# path_labels = \"../../content/RiverBlindness/labels/\"\n",
+    "# path_images_val = \"../../content/RiverBlindness/val_img/\"\n",
+    "# path_labels_val = \"../../content/RiverBlindness/val_labels/\"\n",
     "\n",
     "with open(path_save_model + \"logs/settings.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    settings = { \n",
