--- a/Enet_Segmentation/MetrikenEvalEvery.ipynb
+++ b/Enet_Segmentation/MetrikenEvalEvery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d9f7b8b7",
    "metadata": {},
    "outputs": [],
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4723ee5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the path to the folder which contains the metrics files\n",
-    "path_metrics = \"./modelEvaluation/logs/\"\n",
+    "#path_metrics = \"./modelEvaluationBackup/SchistosomaMansoni_12_02_2023__best/logs/\"\n",
+    "path_metrics = \"../../../DataBackupCode/ModelBackups_16_02_23/EnetEvals/modelEvaluationWithoutDeepRed/logs/\"\n",
     "\n",
     "# Set which epoch should be shown\n",
     "epoch = 10"
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a6d6b097",
    "metadata": {},
    "outputs": [],
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7102eb4c",
    "metadata": {},
    "outputs": [],
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "462ee0e8",
    "metadata": {},
    "outputs": [],
@@ -110,21 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f5dc08c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;3mDice Score Means\u001b[0m\n",
-      "Mean values of epoch 10 :\n",
-      "class 0:  0.6281405708901292 \n",
-      "class 1:  0.7019242662940416\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "means_dicescore = load_file('diceScoreMeans.json')\n",
     "class0_mean, class1_mean = epoch_in_means(means_dicescore)\n",
@@ -133,21 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9662d642",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;3mJaccard Index Means\u001b[0m\n",
-      "Mean values of epoch 10 :\n",
-      "class 0:  0.5113740357910356 \n",
-      "class 1:  0.5814196660562485\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "means_jaccard = load_file('jaccardIndexMeans.json')\n",
     "class0_mean, class1_mean = epoch_in_means(means_jaccard)\n",
@@ -156,73 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "200c6bb6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JACCARD\n",
-      "╒═════════╤══════════╕\n",
-      "│ \u001b[1;3mEpoch\u001b[0m   │ \u001b[1;3mMean\u001b[0m     │\n",
-      "╞═════════╪══════════╡\n",
-      "│ 10      │ 0.748015 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 20      │ 0.765342 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 30      │ 0.794907 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 40      │ 0.761951 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 50      │ 0.766044 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 60      │ 0.750167 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 70      │ 0.748398 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 80      │ 0.779441 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 90      │ 0.778911 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 100     │ 0.716518 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 110     │ 0.773752 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 120     │ 0.546397 │\n",
-      "╘═════════╧══════════╛\n",
-      "DICE\n",
-      "╒═════════╤══════════╕\n",
-      "│ \u001b[1;3mEpoch\u001b[0m   │ \u001b[1;3mMean\u001b[0m     │\n",
-      "╞═════════╪══════════╡\n",
-      "│ 10      │ 0.84119  │\n",
-      "├─────────┼──────────┤\n",
-      "│ 20      │ 0.854095 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 30      │ 0.875347 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 40      │ 0.852479 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 50      │ 0.854327 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 60      │ 0.839333 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 70      │ 0.840015 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 80      │ 0.862407 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 90      │ 0.862357 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 100     │ 0.811185 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 110     │ 0.859032 │\n",
-      "├─────────┼──────────┤\n",
-      "│ 120     │ 0.665032 │\n",
-      "╘═════════╧══════════╛\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "means_per_epoch_jaccard = get_means_per_epoch('jaccardIndexMeans.json')\n",
     "means_per_epoch_dice = get_means_per_epoch('diceScoreMeans.json')\n",
